--- a/public/style.css
+++ b/public/style.css
@@ -257,22 +257,21 @@ input[type='text']:not(.browser-default):focus:not([readonly]) + label {
         align-items: center;
         flex-direction: column;
     }
+    .question-form {
+        flex-direction: column;
+    }
 
     .year {
         flex-basis: auto;
-        flex: 0;
-        padding-right: 20px;
-        margin-left: -15px;
+        width: 100%;
+        text-align: center;
     }
 
     .input-button {
         flex-basis: auto;
-        flex: 1;
+        width: 100%;
+        text-align: center;
     }
-    .year h3 {
-        font-size: 22px;
-    }
-
     .answers-container {
         max-width: 100%;
     }
