--- a/docs/public/style.css
+++ b/docs/public/style.css
@@ -21,6 +21,19 @@ body {
     padding-right: 15px;
     font-size: 35px;
 }
+.date-picker-container {
+    display: flex;
+    align-items: center;
+}
+
+.date-picker-container input {
+    text-align: center;
+}
+
+.date-picker-container .btn-flat {
+    color: #fca82e;
+    font-weight: bold;
+}
 
 .question {
     text-align: center;
@@ -257,22 +270,21 @@ input[type='text']:not(.browser-default):focus:not([readonly]) + label {
         align-items: center;
         flex-direction: column;
     }
+    .question-form {
+        flex-direction: column;
+    }
 
     .year {
         flex-basis: auto;
-        flex: 0;
-        padding-right: 20px;
-        margin-left: -15px;
+        width: 100%;
+        text-align: center;
     }
 
     .input-button {
         flex-basis: auto;
-        flex: 1;
+        width: 100%;
+        text-align: center;
     }
-    .year h3 {
-        font-size: 22px;
-    }
-
     .answers-container {
         max-width: 100%;
     }
